# boids3d

./: .gitmodules  BRANCH_INFO.md  Cargo.toml  LICENSE_MIT  README.md
benches/: boids_update.rs
benchmarks/: report.md
scripts/: collect_benchmarks.cjs
src/: boids.rs  gl_utils.rs  kdtree.rs  lib.rs  render3d.rs  scene.rs  utils.rs
tests/: kdtree.rs  web.rs
www/: index.html  index.js  package-lock.json  package.json  webpack.config.js
